# NaaPills

./: .gitignore  .vercelignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: main.py
backend/data/: medicines.json  schedule.json  supplements.json  tracking.json
backend/services/: blob_storage.py  data_loader.py  medicine_service.py  schedule_service.py  supplement_service.py  tracking_db.py  tracking_persist.py  tracking_service.py
data/: prescription.json  tracker.json
frontend/: index.html  manifest.json  pilltrack.html
frontend/css/: pilltrack.css  style.css
frontend/js/: app.js  pilltrack.js
frontend/templates/: home.html  period.html
