[project]
name = "naapills"
version = "1.0.0"
description = "Nannagaru Medicine Assistant — THR recovery reminder app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]
